<?xml version="1.0"?>
<package format="2">
  <name>velodyne_description</name>
  <version>1.0.9</version>
  <description>
    URDF and meshes describing Velodyne laser scanners.
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://wiki.ros.org/velodyne_description</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- ${prefix} is essentially the directory where the package.xml would be, but in the install directory -->
    <!-- i.e., <ros2-workspace>/install/velodyne_description/share/velodyne_description -->
    <!-- To access the LiDAR meshes outside of this repo (the meshes/ folder), the export path has to be one level above ${prefix} -->
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>

</package>
